# papertrail

./: .env.example  .gitignore  .vercelignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEMO.md  LICENSE  NOTICE  PRD.md  README.md  SUBMISSION.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  test_export_manual.test.ts  tsconfig.json  vercel.json  vitest.config.ts
app/: error.tsx  layout.tsx  loading.tsx  (+4 more)
backend/engines/indra/: .readthedocs.yml  CONTRIBUTING.md  PAPERTRAIL.md  PAPERTRAIL_REFCONTEXT.md  README.md  grounding_hook.py  papertrail_refcontext.py  pyproject.toml
backend/engines/indra/.github/workflows/: tests.yml
backend/engines/indra/doc/: conf.py  installation.rst
backend/engines/indra/docker/: Dockerfile
backend/engines/indra/indra/: __init__.py
backend/engines/indra/indra/assemblers/english/: assembler.py
backend/engines/indra/indra/assemblers/indranet/: assembler.py  net.py
backend/engines/indra/indra/assemblers/kami/: assembler.py
backend/engines/indra/indra/assemblers/pybel/: assembler.py
backend/engines/indra/indra/assemblers/pysb/: kappa_util.py
backend/engines/indra/indra/assemblers/sbgn/: assembler.py
backend/engines/indra/indra/assemblers/sif/: assembler.py
backend/engines/indra/indra/assemblers/tsv/: assembler.py
backend/engines/indra/indra/benchmarks/: benchmark_trips.py
backend/engines/indra/indra/benchmarks/bioprocesses/: __main__.py
backend/engines/indra/indra/databases/: chebi_client.py  context_client.py  lincs_client.py  ndex_client.py  uniprot_client.py
backend/engines/indra/indra/literature/: __init__.py  adeft_tools.py  crossref_client.py  elsevier_client.py  pmc_client.py  pubmed_client.py  s3_client.py
backend/engines/indra/indra/ontology/bio/: __init__.py  sqlite_ontology.py
backend/engines/indra/indra/preassembler/grounding_mapper/: gilda.py
backend/engines/indra/indra/sources/bel/: processor.py
backend/engines/indra/indra/sources/geneways/: action_parser.py  actionmention_parser.py  api.py  find_full_text_sentence.py  symbols_parser.py
backend/engines/indra/indra/sources/index_cards/: __init__.py
backend/engines/indra/indra/sources/minerva/: minerva_client.py
backend/engines/indra/indra/sources/ndex_cx/: api.py  processor.py
backend/engines/indra/indra/sources/omnipath/: api.py  processor.py
backend/engines/indra/indra/statements/: context.py  evidence.py  statements.py  util.py
backend/engines/indra/indra/tests/: test_adeft_tools.py  test_benchmarks.py  test_chembl_client.py  test_context.py  test_crossref_client.py  test_cyjs_assembler.py  test_db_rest.py  test_geneways.py  test_graph_assembler.py  test_hgnc_client.py  test_indranet_assembler.py  test_kami_assembler.py  test_kappa_util.py  test_lincs_client.py  test_mechlinker.py  test_medscan.py  test_model_checker.py  test_ndex_client.py  test_ndex_cx_processor.py  test_omnipath.py  test_pmc_client.py  test_pubmed_client.py  test_pybel_api.py  test_rasmachine.py  test_rlimsp.py  test_s3_client.py  test_sbgn_assembler.py  test_sif_assembler.py  test_signor.py  test_statements.py  test_statements_serialization.py  test_tkg.py  test_trips_ekbs.py  test_virhostnet.py
backend/engines/indra/indra/tools/: assemble_corpus.py  extract_grounding_map.py  mechlinker_queries.py
backend/engines/indra/indra/util/: nested_dict.py  plot_formatting.py  repickle_stmts.py  statement_presentation.py
(+2437 files in other folders)
