[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indra"
dynamic = ["version"]
description = "Integrated Network and Dynamical Reasoning Assembler"
readme = "README.md"
authors = [
    {name = "Benjamin Gyori", email = "b.gyori@northeastern.edu"},
]
keywords = [
    "systems", "biology", "model", "pathway", "assembler",
    "nlp", "mechanism", "biochemistry", "network",
    "big mechanism", "bigmech",
    "world modelers",
    "communicating with computers", "cwc",
    "automated scientific discovery framework", "asdf",
    "automating scientific knowledge extraction", "aske",
    "panacea",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    'pysb@ git+https://github.com/pysb/pysb.git ; python_version >= "3.10"',
    'pysb<=1.16.0; python_version < "3.10"',
    "objectpath",
    "requests>=2.11",
    "lxml",
    "ipython",
    "networkx>=3",
    "pandas>=2",
    "ndex2",
    "jinja2",
    "protmapper>=0.0.29",
    "obonet",
    "tqdm",
    "pybiopax>=0.0.5",
    # pybel requires setuptools<81
    "setuptools<81",
]

[project.urls]
Homepage = "http://github.com/gyorilab/indra"

[project.optional-dependencies]
# Inputs and outputs
trips_offline = ["pykqml"]
reach_offline = ["pyjnius>=1.6.1"]
eidos_offline = ["pyjnius>=1.6.1"]
hypothesis = ["gilda>1.0.0"]
geneways = ["stemming", "nltk<3.6"]
bel = ["pybel>=0.15.0,<0.16.0"]
# texttoknowledgegraph pins lxml==5.2.1 which has no Python 3.13 wheels, so we
# skip it on 3.13 until upstream unpins.
tkg = [
    "pybel>=0.15.0,<0.16.0",
    'texttoknowledgegraph; python_version >= "3.9" and python_version < "3.13"',
]
sbml = ["python-libsbml"]
# Tools and analysis
machine = ["pytz", "tzlocal", "tweepy", "pyyaml>=5.1.0", "click"]
explanation = ["kappy==4.1.2", "paths-graph"]
grounding = ["adeft", "gilda>1.0.0"]
# AWS interface and database
aws = ["boto3", "reportlab"]
# Utilities
graph = ["pygraphviz"]
plot = ["matplotlib"]
isi = ["nltk<3.6", "unidecode"]
api = [
    "flask>=3.0,<4.0",
    "flask_restx>=1.3.0",
    "flask_cors",
    "docstring-parser",
    "gunicorn",
]
sklearn_belief = ["scikit-learn"]
owl = ["pronto"]
tests = [
    "pytest",
    "pytest-cov",
    "pynose",  # This is needed for PySB with_model in some tests
]
all = [
    "indra[trips_offline,reach_offline,eidos_offline,hypothesis,geneways,bel,tkg,sbml,machine,explanation,grounding,aws,graph,plot,isi,api,sklearn_belief,owl,tests]",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["indra*"]

[tool.setuptools.dynamic]
version = {attr = "indra.__version__"}

[tool.ruff.lint]
select = ["NPY201"]
